# searchllama

./: .gitignore  Cargo.toml  README.md
searchllama/: Cargo.toml
searchllama-types/: Cargo.toml
searchllama-types/src/: lib.rs
searchllama-web/: Cargo.toml  index.html  style.css
searchllama-web/src/: base.rs  main.rs  markdown.rs  search.rs
searchllama/src/: database.rs  embedding.rs  main.rs  search.rs
