[package]
name = "searchllama-web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
lazy_static = "1.4.0"
wasm-bindgen-futures = "^0.4"
yew-markdown = { git = "https://github.com/rambip/yew-markdown" }
futures = "0.3"
reqwest = { version = "^0.12", features = ["stream"] }
searchllama-types = { path = "../searchllama-types" }
serde_json = "^1.0"
web-sys = "^0.3"
yew-router = "^0.18"
log = "^0.4"
console_log = "^1"