[package]
name = "searchllama-web"
version = "0.1.0"
edition = "2021"

[dependencies]
searchllama-types = { path = "../searchllama-types" }
yew = { version = "^0.21", features = ["csr"] }
yew-router = "^0.18"
lazy_static = "1.4.0"
wasm-bindgen-futures = "^0.4"
console_log = "^1"
log = "^0.4"
yew-hooks = "^0.3"
web-sys = "^0.3"
futures = "^0.3"
markdown = "0.3.0"